<resources>
    <string name="app_name">Humanitas Foosball</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add_player_message">Create new player</string>
    <string name="dialog_update_player_message">Update Player</string>
    <string name="dialog_add_match_message">New Match</string>
    <string name="blue_score_base">Blue Score: </string>
    <string name="red_score_base">Red Score: </string>
    <string name="menu_title_update_player">Update Player</string>
    <string name="menu_title_new_player">New Player</string>
    <string name="menu_title_new_match">New Match</string>
    <string name="blue_defender">Blue Defender…</string>
    <string name="blue_attacker">Blue Attacker…</string>
    <string name="red_attacker">Red Attacker…</string>
    <string name="red_defender">Red Defender…</string>
    <string name="rank">Rank</string>
    <string name="player">Player</string>
    <string name="player_name">Player Name…</string>
    <string name="initials_wins">Initials Wins</string>
    <string name="initial_matchs">Initial Matchs</string>
    <string name="old_player_name">Old Player Name</string>
    <string name="new_player_name">New Player Name</string>
    <string name="placeholder">Placeholder</string>
    <string name="defense">Defense</string>
    <string name="attack">Attack</string>
    <string name="sort_players_elo">players: elo</string>
    <string name="sort_players_ratio">players: ratio</string>
    <string name="sort_players_hidden">players: hidden</string>
    <string name="sort_matches_time">matches: time</string>
    <string name="sort_matches_hidden">matches: hidden</string>
    <string name="placeholder_numbers_tens">99</string>
    <string name="placeholder_numbers_thousands">9999</string>
    <string name="placeholder_letter_to_l">abcdefghijkl</string>
    <string name="placeholder_percent">100%</string>
</resources>
