<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/match_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_timestamp">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/block_blue_team"
            style="@style/match_blue_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/match_score_block"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/player_blue"
                android:layout_width="15dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/table_blue"
                app:layout_constraintEnd_toStartOf="@+id/table_blue"
                app:layout_constraintTop_toTopOf="@+id/table_blue">

            </android.support.constraint.ConstraintLayout>

            <TableLayout
                android:id="@+id/table_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/attack_blue_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attack" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/attack_blue_name"
                        android:layout_width="@dimen/player_name_size_match"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/defense_blue_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defense" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/defense_blue_name"
                        android:layout_width="@dimen/player_name_size_match"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder" />
                </TableRow>

            </TableLayout>

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/match_score_block"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/block_red_team"
            app:layout_constraintStart_toEndOf="@+id/block_blue_team"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51">

            <TextView
                android:id="@+id/match_view_blue_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hyphen"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hyphen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/match_view_red_score"
                app:layout_constraintStart_toEndOf="@+id/match_view_blue_score"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/match_view_red_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hyphen"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/block_red_team"
            style="@style/match_red_block"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/match_score_block"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/player_red"
                android:layout_width="15dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/table_red"
                app:layout_constraintStart_toEndOf="@+id/table_red"
                app:layout_constraintTop_toTopOf="@+id/table_red">

            </android.support.constraint.ConstraintLayout>

            <TableLayout
                android:id="@+id/table_red"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/attack_red_name"
                        android:layout_width="@dimen/player_name_size_match"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textAlignment="textEnd" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/attack_red_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attack"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/defense_red_name"
                        android:layout_width="@dimen/player_name_size_match"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textAlignment="textEnd" />

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/defense_red_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defense"
                        android:textAlignment="textEnd" />
                </TableRow>

            </TableLayout>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>